--- a/article/Article.tex
+++ b/article/Article.tex
@@ -1011,7 +1011,7 @@ patience during the long development time before getting a tool really usable.
 I also thank Richard Beare for his early interest in using itk with python, and for
 his useful feedbacks.
 
-Thank to Charl P. Botha for is help to debug WrapITK on windows plateform and for the
+We thank Charl P. Botha for is help to debug WrapITK on windows plateform, and for the
 patches he has contributed.
 
 Finally, we thank the ITK developers for the great tool which is ITK, and for the
