--- a/article/Article.bib
+++ b/article/Article.bib
@@ -59,6 +59,22 @@
   howpublished = "\url{http://www.swig.org/}"
 }
 
+@misc{VtkWebSite,
+  howpublished = "\url{http://www.vtk.org}"
+}
+
+@misc{IPythonWebSite,
+  howpublished = "\url{http://ipython.scipy.org}"
+}
+
+@misc{PyQtWebSite,
+  howpublished = "\url{http://www.riverbankcomputing.co.uk/pyqt}"
+}
+
+@misc{ImviewWebSite,
+  howpublished = "\url{http://www.cmis.csiro.au/Hugues.Talbot/imview/}"
+}
+
 @misc{WebSite,
   howpublished = "\url{}"
 }
