--- a/article/Article.bib
+++ b/article/Article.bib
@@ -75,6 +75,22 @@
   howpublished = "\url{http://www.cmis.csiro.au/Hugues.Talbot/imview/}"
 }
 
+@misc{NumericWebSite,
+  howpublished = "\url{http://numeric.scipy.org}"
+}
+
+@misc{NumarrayWebSite,
+  howpublished = "\url{http://www.stsci.edu/resources/software_hardware/numarray}"
+}
+
+@misc{NumpyWebSite,
+  howpublished = "\url{http://www.numpy.org}"
+}
+
+@misc{InsightJournalWebSite,
+  howpublished = "\url{http://www.insight-journal.org}"
+}
+
 @misc{WebSite,
   howpublished = "\url{}"
 }
