typo, and complete Benoit s affiliation
darcs-hash:20060323161337-2fc9d-954e146a5562f1d439051e7e7dd1292dc5048b88.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -44,7 +44,7 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 \author{Ga\"etan Lehmann{$^1$}{\small{,}} Zachary Pincus{$^2$} {\small{and}} Benoit Regrain{$^3$}}
 \authoraddress{{$^1$}Unit\'e de Biologie du D\'eveloppement et de la Reproduction, Institut National de la Recherche Agronomique, 78350 Jouy-en-Josas, France\\
 {$^2$}Stanford University, CA 94305, USA\\
-{$^3$}Creatis, CNRS, 69621 Villeurbanne, France}
+{$^3$}CREATIS, CNRS UMR 5515, 69621 Villeurbanne, France}
 
 \begin{document}
 \lstset{language=python}
@@ -669,7 +669,7 @@ for the language support files that are created next. This macro is defined in
 \verb$CreateCableSwigInputs.cmake$, and calls language support macros from
 \verb$CreateLanguageSupport.cmake$.
 
-  \item Finally, \verb$WRAPPER_LIBRARY_CREATE_LIBRARY()$ creates rules to parse the CalbeSwig
+  \item Finally, \verb$WRAPPER_LIBRARY_CREATE_LIBRARY()$ creates rules to parse the CableSwig
 inputs and compile a wrapper library. This macro also causes various language
 support files to be created (python only currently) which make it easy to load
 that library in python, and which know about the template instances defined.
