--- a/article/Article.tex
+++ b/article/Article.tex
@@ -84,7 +84,7 @@ he has to spend lot of time to extend the current set of classes. Even if it is
 not yet complete, the WrapITK's set of classes have been highly extended. Moreover,
 the user can choose at build time which types and which dimensions he want to wrap.
 
-  \item  The template arguments set is poorly choosen, making sometime impossible
+  \item  The template arguments set is poorly chosen, making sometime impossible
 to create a pipeline. In WrapITK, most of the filters have the same input and output
 types, and only a few filters allow to change type. This make the types manipulated 
 by filters more consistent, and the user should always be able to build his pipeline.
@@ -94,7 +94,7 @@ languages. For example, the \verb$GetPixel()$ method of the class \verb$itk::Ima
 returns a string describing a pointer, but don't return the pixel value. In WrapITK,
 most types used in classes are available in target languages.
 
-  \item  Names in target laguages are inconsistents. WrapITK use a strict naming
+  \item  Names in target languages are inconsistent. WrapITK use a strict naming
 convention which should make easier to identify the template arguments.
 
   \item  The ITK wrapping system is difficult to understand and maintain. WrapITK was
@@ -113,7 +113,7 @@ that they interact seamlessly with the other wrapped classes.
   \item  The python's \verb$InsightToolkit$ module is only structured as a big
 list of names. It make it nearly unusable in the python interpreter. WrapITK
 comes with a new well designed python module easy to use in interpreter, and
-aproviding run-time lookup of templated types - thing which can't be easily done
+providing run-time lookup of templated types - thing which can't be easily done
 in C++. Additionally, WrapITK ensures that \verb$SmartPointer$s are always
 returned and acceptable as input, so no bare pointers are ever exposed to
 Python. This is not the case in the standard ITK wrappers.
@@ -238,7 +238,7 @@ Once built, WrapITK can be installed or used in place.
 
 If WrapITK has been installed, then using it from within python is trivial:
 simply issue the command \verb$import itk$, and you are ready to go. This
-is because WrapITK installs a pth file in the python \verb$site-packages$ directory so
+is because WrapITK installs a \verb$.pth$ file in the python \verb$site-packages$ directory so
 that python knows where to find the itk scripts.
 
 If WrapITK has not been installed, then you will either need to set the
@@ -271,7 +271,7 @@ image = imageType.New()
 This construction is similar to what is done in C++, and make it easy to change
 the dimension used for example - it can even be changed at run-time.
 
-A more convenient syntaxe for usage in interpreter is also available:
+A more convenient syntax for usage in interpreter is also available:
 \begin{itemize}
   \item \verb$itk.Image.UC3$
   \item \verb$itk.Image.US3$
@@ -305,7 +305,7 @@ def write( image, fileName ) :
 
      \subsubsection{The {\em New()} method}
 
-Losts of classes have a \verb$New()$ method which returns a smart pointer to that class. The
+Lots of classes have a \verb$New()$ method which returns a smart pointer to that class. The
 \verb$New()$ method in python has some additional features:
 \begin{itemize}
   \item Arguments to the new method are assumed to be filter inputs. So you could
@@ -346,7 +346,7 @@ def write( image, fileName ) :
     writer.Update()
 \end{verbatim}
 
-and, more important, most of classes can be instanciated and parametered in one line,
+and, more important, most of classes can be instantiated and parametered in one line,
 which make ITK less verbose, and a lots more easy to use in the interpreter.
 
 
@@ -420,7 +420,7 @@ Also, with the optional patches, some itk object can be converted to python sequ
 \end{verbatim}.
 
 To set the same radius for all dimensions, it is possible to use the \verb$*$ python
-sequence operator - that way, it is possible to write code independant of dimension.
+sequence operator - that way, it is possible to write code independent of dimension.
 
 \begin{verbatim}
 25> median.SetRadius( [3]*2 )
@@ -526,7 +526,7 @@ can be called with a 3D image as parameter to show the image slice by slice.
 \end{figure}
 
   \item \verb$itk.strel(d, s)$ is used to create a binary ball structuring of dimension
-\verb$d$ and size \verb$s$. Strucutring element support is quite bad currently in WrapITK
+\verb$d$ and size \verb$s$. Structuring element support is quite bad currently in WrapITK
 and should change in the future. Using \verb$itk.strel$ rather than creating a
 \verb$BinaryBallStructuringElement$ directly is recommended to have backward compatibility
 when the structuring element type will be changed.
@@ -689,7 +689,7 @@ template instances.
 
 WrapITK define several macros and variable designed to:
 \begin{itemize}
-  \item make creation of wrappers easy. The syntax is simple enough to get in quickely.
+  \item make creation of wrappers easy. The syntax is simple enough to get in quickly.
   \item make choice of template arguments explicit. It should be easy to understand
 the idea of the author of a wrapper by reading the file.
   \item support mostly transparently the dimensions and types chosen by the user.
@@ -799,7 +799,7 @@ by the user.
   \item \verb$WRAP_ITK_VECTOR$ contains all the \verb$Vector$ and 
 \verb$CovariantVector$ types selected by the user.
 
-  \item \verb$WRAP_ITK_ALL_TYPES$ contains all the types selected byt the user.
+  \item \verb$WRAP_ITK_ALL_TYPES$ contains all the types selected by the user.
 
   \item \verb$SMALLER_THAN_D$ contains all the types "smaller" than \verb$double$
 selected by the user. This variable is useful when a filter decrease the range
@@ -934,7 +934,7 @@ External projects let the developer access some custom class with the target lan
 and is a powerful way to extend WrapITK, test new wrapper, wrap more types, etc.
 A nice side effect of wrappers, for contributions\footnote{A nice template for
 contributions to the Insight Journal \cite{InsightJournalWebSite} which include the 
-temlate code to build wrappers is available at
+template code to build wrappers is available at
 \url{http://voxel.jouy.inra.fr/darcs/contrib-itk/template/}. Just use the command
 {\em darcs get http://voxel.jouy.inra.fr/darcs/contrib-itk/template/ contribName}
 and edit the project name in the {\em CMakeLists.txt} file to
