additions from Zach and Benoit
darcs-hash:20060324105919-2fc9d-b984f2f8aabd69fddc872c0925c10e98c7e36b50.gz

--- a/article/Article.bib
+++ b/article/Article.bib
@@ -91,6 +91,18 @@
   howpublished = "\url{http://www.insight-journal.org}"
 }
 
+@misc{MacOSXWebSite,
+  howpublished = "\url{http://www.apple.com/macosx}"
+}
+
+@misc{MandrivaWebSite,
+  howpublished = "\url{http://www.mandriva.com}"
+}
+
+@misc{WindowsWebSite,
+  howpublished = "\url{http://www.microsoft.com/windows}"
+}
+
 @misc{WebSite,
   howpublished = "\url{}"
 }
