--- a/article/Article.tex
+++ b/article/Article.tex
@@ -43,7 +43,7 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 % snail-mail address if you like.
 \author{Ga\"etan Lehmann{$^1$}{\small{,}} Zachary Pincus{$^2$} {\small{and}} Benoit Regrain{$^3$}}
 \authoraddress{{$^1$}Unit\'e de Biologie du D\'eveloppement et de la Reproduction, Institut National de la Recherche Agronomique, 78350 Jouy-en-Josas, France\\
-{$^2$}Stanford University, CA 94305, USA\\
+{$^2$}Program in Biomedical Informatics and Department of Biochemistry, Stanford University School of Medicine, Stanford, California\\
 {$^3$}CREATIS, CNRS UMR 5515, 69621 Villeurbanne, France}
 
 \begin{document}
@@ -118,12 +118,14 @@ in C++. Additionally, WrapITK ensures that \verb$SmartPointer$s are always
 returned and acceptable as input, so no bare pointers are ever exposed to
 Python. This is not the case in the standard ITK wrappers.
 
+  \item ITK was broken on MacOS X \cite{MacOsXWebSite} with python.
+
 \end{itemize}
 
-Currently, WrapITK have been tested on Mandriva Linux, and MacOS X, and only
+Currently, WrapITK have been tested on Mandriva Linux \cite{MandrivaWebSite}, and MacOS X, and only
 supports Python properly; Java and Tcl libraries build
-correctly but the Java and Tcl support classes for loading these libraries needs
-some updating.
+correctly but the Java and Tcl support classes for loading these libraries is
+entirely out of date and is not working.
 
 The article you're reading is not as nice and complete than what we would have
 done, but it seems important to us to release our work and to get feedbacks
@@ -240,6 +242,10 @@ If WrapITK has been installed, then using it from within python is trivial:
 simply issue the command \verb$import itk$, and you are ready to go. This
 is because WrapITK installs a \verb$.pth$ file in the python \verb$site-packages$ directory so
 that python knows where to find the itk scripts.
+
+On linux boxes however, the user have to set the \verb$LD_LIBRARY_PATH$ to
+point to libSwigRuntime.so. For example
+\verb$export LD_LIBRARY_PATH=/usr/lib/InsightToolkit/WrapITK/Python-SWIG$.
 
 If WrapITK has not been installed, then you will either need to set the
 \verb$PYTHONPATH$ environment variable to contain the directory
@@ -440,6 +446,7 @@ Here is the list of itk classes which can currently be substituted by python seq
   \item \verb$Offset$
   \item \verb$Size$
   \item \verb$Vector$
+  \item \verb$ContinuousIndex$
 \end{itemize}
 
      \subsubsection{Python specific functions in the {\em itk} module}
@@ -448,13 +455,18 @@ Some convenient functions are provided with the itk module. They all begin with 
 case character to clearly show they are not part of ITK.
 \begin{itemize}
   \item \verb$itk.image(object)$ try to return an image from the object given in
-parameter. This function is used in most of the next functions to allow the user to
-pass an image or a filter.
+parameter. If the object is an image, it is returned without changes. If the object
+is a filter, the object returned by \verb$GetOutput()$ metyhod is returned.
+This function is used in most of the next functions to allow the user to
+pass an image or a filter, and is available here for the same usage in some custom
+fuctions.
 
   \item \verb$itk.range(object)$ return the range of values of an image in a tuple.
 \verb$object$ can be an image or a filter. In case of a filter, \verb$itk.image()$ is used
 to get the output image of the filter. The function update the pipeline by calling
 \verb$UpdateOutputInformation()$ and \verb$Update()$.
+
+This function is only a convenient function for a common task while prototyping.
 
 Example:
 \begin{verbatim}
@@ -472,6 +484,8 @@ Example:
 to get the output image of the filter. The function update only the information of the
 pipeline, by calling \verb$UpdateOutputInformation()$, but don't trigger a full update
 of the pipeline.
+
+This function is only a convenient function for a common task while prototyping.
 
 Example:
 \begin{verbatim}
@@ -500,6 +514,8 @@ having to pass the image type.
 \verb$object$ can be an image or a filter. In case of a filter, \verb$itk.image()$ is used
 to get the output image of the filter. The function update the pipeline by calling
 \verb$UpdateOutputInformation()$ and \verb$Update()$.
+
+This function is only a convenient function for a common task while prototyping.
 
 Example:
 \begin{verbatim}
@@ -583,7 +599,7 @@ configuration file to make these man pages. Finally, run doxygen with that
 configuration file. After these three simple steps, class docstrings will
 contain the man page information. Note that this is limited to systems which
 support the python \verb$commands$ module, and which have \verb$groff$ in the path. This
-basically means anything but windows will work. (Cygwin should work too.)
+basically means anything but windows \cite{WindowsWebSite} will work. (Cygwin should work too.)
 
 In addition (as mentioned above), WrapITK by default ensures that no bare
 pointers are ever returned to python: instead reference-counting \verb$SmartPointer$s
@@ -730,7 +746,7 @@ class name, and note that no template instantiation is given. Template
 instantiations are created with various \verb$WRAP$ directives, described below,
 between invocations of \verb$WRAP_CLASS()$ and \verb$END_WRAP_CLASS()$.
 
-\verb$WRAP_CLASS$ issues an implicit call to \verb$WRAP_INCLUDE("ClassName.h")$, so the header
+\verb$WRAP_CLASS("itk::ImageFilter")$ issues an implicit call to \verb$WRAP_INCLUDE("itkImageFilter.h")$, so the header
 for the wrapped class itself does not need to be manually included. To disable
 this behavior, set \verb$WRAPPER_AUTO_INCLUDE_HEADERS$ to \verb$OFF$.
 
@@ -742,7 +758,10 @@ things won't work. This is always the case for ITK-style code.) If
 \verb$POINTER_WITH_SUPERCLASS$ is provided, then \verb$class::Pointer$, \verb$class::Superclass$ and
 \verb$class::Superclass::Pointer$ are all wrapped. (Again, this only works for
 ITK-style code where the class has a typedef'd \verb$Superclass$, and the superclass
-has \verb$Self$ and \verb$Pointer$ typedefs.)
+has \verb$Self$ and \verb$Pointer$ typedefs). \verb$POINTER_WITH_SUPERCLASS$ is especially
+useful for wrapping classes whose superclasses depend on the template definitions of the given
+filter. E.g. any of the functor image filters, which define  totally different superclass
+template parameters depending on which functor is used.
 
   \item \verb$END_WRAP_CLASS()$ -- end a block of template instantiations for a particular
 class.
@@ -754,6 +773,7 @@ time enough. If it not enough, this macro can be used to include some specific f
   \item \verb$WRAPPER_AUTO_INCLUDE_HEADERS$. This variable is set to \verb$ON$ by default, but can
 be set to \verb$OFF$ to disable the auto include feature. This feature should be used when several
 classes to wrap come from the same header file.
+\verb$WRAPPER_AUTO_INCLUDE_HEADERS$ is re-set to \verb$ON$ for each new \verb$wrap_xxx.cmake$ file.
 
   \item \verb$WRAP_TEMPLATE("mangled_suffix" "template parameters")$. When issued between \verb$WRAP_CLASS$
 and \verb$END_WRAP_CLASS$, this command causes a particular template instantiation of
@@ -844,6 +864,15 @@ some CMake native commands in the future.
 
 Some convenient macros are available to wrap image filters.
 
+These macros often take an optional second parameter which is a "dimensionality
+condition" to restrict the dimensions that theis filter will be instantiated
+for. The condition can either be a single number indicating the one dimension
+allowed, a list of dimensions that are allowed (either as a single \verb$-$delimited
+string or just a set of separate parameters), or something of the form \verb$n+$
+(where \verb$n$ is a number) indicating that instantiations are allowed for dimension
+n and above.
+
+
 \begin{itemize}
 
   \item \verb$WRAP_IMAGE_FILTER_type(size)$ . \verb$type$ can be one of:
@@ -870,9 +899,8 @@ be determined by the user-selected build parameters (e.g. \verb$WRAP_long$, and
 macro for wrapping image filters that need one or more image parameters of the
 same type. The first parameter to this macro is a list of image pixel types for
 which filter instantiations should be created. The second is a \verb$param_count$
-parameter which controls how many image template parameters are created (see
-above). The optional third parameter is a dimensionality condition (see above
-also).
+parameter which controls how many image template parameters are created. The
+optional third parameter is a dimensionality condition.
 
 E.g. \verb@WRAP_IMAGE_FILTER("${WRAP_ITK_ALL}" 2)@ will create template instantiations
 of the filter for every pixel type that the user has selected.
@@ -946,9 +974,12 @@ more classes to WrapITK}.
 
     \subsubsection{Building}
 To build an external project, first ensure that WrapITK has been properly built.
-Then use ccmake to configure a build directory for the external project. If
+Then use \verb$ccmake$ to configure a build directory for the external project. If
 WrapITK has not been installed, you will have to manually enter the path to the
 WrapITK build directory.
+
+By default, the build options are the same than the one used for building WrapITK,
+but can be modified in the advanced options.
 
     \subsubsection{Usage}
 Once an external project has been built, it can be tested directly from the
@@ -994,13 +1025,48 @@ More examples can be found in the contributions to the Insight Journal
 
     \subsubsection{BufferConversion: an example of extension for one language}
 
+Write me.
+
     \subsubsection{ItkVtkGlue: an example of extension for all languages, including C++}
+
+ItkVtkGlue wrap the classes used to convert data from ITK to VTK \cite{VtkWebSite} and from VTK to ITK.
+Those classes comes from the InsightApplications \cite{ITKWebSite}, and make the conversion
+as simple in python as in C++. It has been tested with VTK 5.0.0.
+
+By default, those classes are not loaded in the \verb$itk$ module to avoid loading
+all the \verb$vtk$ module while importing \verb$itk$. The command \verb$import itkvtk$
+will load the module, and add the classes both in \verb$itkvtk$ and\verb$itk$ module.
+The classes are then usable as the other itk classes.
+
+Example:
+\begin{verbatim}
+1> import itk
+
+2> import itkvtk
+
+3> reader = itk.ImageFileReader.IUC3.New()
+
+4> converter = itk.ImageToVTKImageFilter.IUC3.New(reader)
+
+5> converter.GetOutput()
+5> <libvtkFilteringPython.vtkImageData vtkobject at 0xb7675b60>
+\end{verbatim}
+
+
+The \verb$itk.show3D$ class use the class \verb$ImageToVTKImageFilter$ to create the
+volume rendering shown in Figure \ref{screenshot}.
 
   \subsection{Extending language support and adding more languages}
 
+Write me.
+
     \subsubsection{Generating target language code}
 
+Write me.
+
     \subsubsection{typemaps}
+
+Write me.
 
   \subsection{Contributing to WrapITK}
 
@@ -1031,11 +1097,12 @@ repository is available at \url{http://voxel.jouy.inra.fr/darcsweb/}.
 I thank Dr Pierre Adenot and all the {\em Embryon et Biotechnologie} team for their
 patience during the long development time before getting a tool really usable.
 
-I also thank Richard Beare for his early interest in using itk with python, and for
-his useful feedbacks.
+We would like to thank Charl P. Botha for is help to debug WrapITK on windows
+plateform, and for the patches he has contributed, as well as Richard Beare for
+his early interest in using itk with python, for his useful feedbacks, and for
+his work on buffer conversion in python.
 
-We thank Charl P. Botha for is help to debug WrapITK on windows plateform, and for the
-patches he has contributed.
+We thank Brad King for his assistance during the development process.
 
 Finally, we thank the ITK developers for the great tool which is ITK, and for the
 previous work done on wrapping system - without it WrapITK would not be there.
