add bugtracker url and reference
darcs-hash:20060405145241-2fc9d-b2a2fc6c9c6e35f9d422e1abfb5b61027fbbbd05.gz

--- a/article/Article.bib
+++ b/article/Article.bib
@@ -103,6 +103,10 @@
   howpublished = "\url{http://www.microsoft.com/windows}"
 }
 
+@misc{RoundupWebSite,
+  howpublished = "\url{http://roundup.sourceforge.net}"
+}
+
 @misc{WebSite,
   howpublished = "\url{}"
 }
