--- a/article/Article.tex
+++ b/article/Article.tex
@@ -1074,7 +1074,8 @@ WrapITK is an opensource project, and so all contributions are welcome. Here are
 some points which requires special attention:
 \begin{itemize}
   \item Test it and report problem. That's the more important thing to do:
-we need feedbacks to enhance WrapITK quality !
+we need feedbacks to enhance WrapITK quality ! Report all bugs you may found
+to \url{http://voxel.jouy.inra.fr/roundup/wrapitk/} \cite{RoundupWebSite}.
   \item Work on tcl, java, and others. We are not tcl or java developers, and so
 are not able to complete the work for those languages. Any help from tcl and
 java expert would be highly appreciated. Also, there is no reason to be limited
